@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2869 2019/07/25 16:48:41 ryoon Exp $
+# $NetBSD: Makefile,v 1.2870 2019/07/30 22:31:32 brook Exp $
 #
 
 COMMENT=	Development utilities
@@ -21,6 +21,7 @@ SUBDIR+=	R-bindr
 SUBDIR+=	R-bit
 SUBDIR+=	R-bit64
 SUBDIR+=	R-blob
+SUBDIR+=	R-checkmate
 SUBDIR+=	R-cli
 SUBDIR+=	R-crayon
 SUBDIR+=	R-evaluate
