@@ -1,0 +1,3 @@
+Tests and assertions to perform frequent argument checks. A
+substantial part of the package was written in C to minimize any
+worries about execution time overhead.
